# rag-document-qa-system

./: .dockerignore  .gitignore  LICENSE  README.md  build_pipeline.py  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  requirements_api.txt
.github/workflows/: deploy.yml
app/: api.py  ui.py
docker/: Dockerfile.api  Dockerfile.ui
src/embedding/: embedding.py
src/generation/: generation.py
src/ingestion/: chunker.py  loader.py
src/pipeline/: ingest.py  rag_pipeline.py
src/retrieval/: retriever.py
src/utils/: exception.py  logger.py
src/vector_store/: faiss_store.py
