[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.70",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.1",
    "mlflow>=3.10.1",
    "pymupdf>=1.27.2.2",
    "pypdf2>=3.0.1",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.3.0",
    "uvicorn>=0.42.0",
]
