[project]
name = "rag-project"
version = "0.1.0"
description = "Intelligent Document Q&A System powered by FastAPI and Streamlit"
authors = [
    { name = "Aman Nautiyal", email = "amannautiyal794@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.70",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.1",
    "mlflow>=3.10.1",
    "nltk>=3.9.4",
    "openai>=2.29.0",
    "pymupdf>=1.27.2.2",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "sentence-transformers==2.6.1",
    "streamlit>=1.55.0",
    "transformers==4.40.0",
    "uvicorn>=0.42.0",
]
